--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   
    
 <div class="footer__copyright row"> 
- <p class="col-12  text-end">&copy; Copyright 2018 Huddle. All rights reserved.</p> </div>
+ <p class="col-12  text-md-end text-center">&copy; Copyright 2018 Huddle. All rights reserved.</p> </div>
 
 </section>
   
